--- a/01-Create-Datasets/03-create-air-quality-dataset.ipynb
+++ b/01-Create-Datasets/03-create-air-quality-dataset.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,6 +49,14 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/td/8cdrl7y9071dt4z0j5965_pw0000gn/T/ipykernel_2977/807740200.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  data = pd.read_csv(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -206,15 +215,15 @@
        "</div>"
       ],
       "text/plain": [
-       "             Date_Time CO(GT)  PT08.S1(CO)  NMHC(GT) C6H6(GT)  PT08.S2(NMHC)  \\\n",
-       "0  10/03/2004 18.00.00    2,6       1360.0     150.0     11,9         1046.0   \n",
+       "             Date_Time CO(GT)  PT08.S1(CO)  NMHC(GT) C6H6(GT)  PT08.S2(NMHC)   \n",
+       "0  10/03/2004 18.00.00    2,6       1360.0     150.0     11,9         1046.0  \\\n",
        "1  10/03/2004 19.00.00      2       1292.0     112.0      9,4          955.0   \n",
        "2  10/03/2004 20.00.00    2,2       1402.0      88.0      9,0          939.0   \n",
        "3  10/03/2004 21.00.00    2,2       1376.0      80.0      9,2          948.0   \n",
        "4  10/03/2004 22.00.00    1,6       1272.0      51.0      6,5          836.0   \n",
        "\n",
-       "   NOx(GT)  PT08.S3(NOx)  NO2(GT)  PT08.S4(NO2)  PT08.S5(O3)     T    RH  \\\n",
-       "0    166.0        1056.0    113.0        1692.0       1268.0  13,6  48,9   \n",
+       "   NOx(GT)  PT08.S3(NOx)  NO2(GT)  PT08.S4(NO2)  PT08.S5(O3)     T    RH   \n",
+       "0    166.0        1056.0    113.0        1692.0       1268.0  13,6  48,9  \\\n",
        "1    103.0        1174.0     92.0        1559.0        972.0  13,3  47,7   \n",
        "2    131.0        1140.0    114.0        1555.0       1074.0  11,9  54,0   \n",
        "3    172.0        1092.0    122.0        1584.0       1203.0  11,0  60,0   \n",
@@ -238,6 +247,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -478,8 +488,8 @@
        "</div>"
       ],
       "text/plain": [
-       "             Date_Time  CO_true  CO_sensor  NMHC_true  C6H6_true  NMHC_sensor  \\\n",
-       "0  10/03/2004 18.00.00      2.6     1360.0      150.0       11.9       1046.0   \n",
+       "             Date_Time  CO_true  CO_sensor  NMHC_true  C6H6_true  NMHC_sensor   \n",
+       "0  10/03/2004 18.00.00      2.6     1360.0      150.0       11.9       1046.0  \\\n",
        "1  10/03/2004 19.00.00      2.0     1292.0      112.0        9.4        955.0   \n",
        "2  10/03/2004 20.00.00      2.2     1402.0       88.0        9.0        939.0   \n",
        "3  10/03/2004 21.00.00      2.2     1376.0       80.0        9.2        948.0   \n",
@@ -574,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +627,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2004-10-03 18:00:00</td>\n",
+       "      <td>2004-03-10 18:00:00</td>\n",
        "      <td>2.6</td>\n",
        "      <td>1360.0</td>\n",
        "      <td>150.0</td>\n",
@@ -634,7 +644,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2004-10-03 19:00:00</td>\n",
+       "      <td>2004-03-10 19:00:00</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1292.0</td>\n",
        "      <td>112.0</td>\n",
@@ -651,7 +661,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2004-10-03 20:00:00</td>\n",
+       "      <td>2004-03-10 20:00:00</td>\n",
        "      <td>2.2</td>\n",
        "      <td>1402.0</td>\n",
        "      <td>88.0</td>\n",
@@ -668,7 +678,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2004-10-03 21:00:00</td>\n",
+       "      <td>2004-03-10 21:00:00</td>\n",
        "      <td>2.2</td>\n",
        "      <td>1376.0</td>\n",
        "      <td>80.0</td>\n",
@@ -685,7 +695,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2004-10-03 22:00:00</td>\n",
+       "      <td>2004-03-10 22:00:00</td>\n",
        "      <td>1.6</td>\n",
        "      <td>1272.0</td>\n",
        "      <td>51.0</td>\n",
@@ -705,12 +715,12 @@
        "</div>"
       ],
       "text/plain": [
-       "            Date_Time  CO_true  CO_sensor  NMHC_true  C6H6_true  NMHC_sensor  \\\n",
-       "0 2004-10-03 18:00:00      2.6     1360.0      150.0       11.9       1046.0   \n",
-       "1 2004-10-03 19:00:00      2.0     1292.0      112.0        9.4        955.0   \n",
-       "2 2004-10-03 20:00:00      2.2     1402.0       88.0        9.0        939.0   \n",
-       "3 2004-10-03 21:00:00      2.2     1376.0       80.0        9.2        948.0   \n",
-       "4 2004-10-03 22:00:00      1.6     1272.0       51.0        6.5        836.0   \n",
+       "            Date_Time  CO_true  CO_sensor  NMHC_true  C6H6_true  NMHC_sensor   \n",
+       "0 2004-03-10 18:00:00      2.6     1360.0      150.0       11.9       1046.0  \\\n",
+       "1 2004-03-10 19:00:00      2.0     1292.0      112.0        9.4        955.0   \n",
+       "2 2004-03-10 20:00:00      2.2     1402.0       88.0        9.0        939.0   \n",
+       "3 2004-03-10 21:00:00      2.2     1376.0       80.0        9.2        948.0   \n",
+       "4 2004-03-10 22:00:00      1.6     1272.0       51.0        6.5        836.0   \n",
        "\n",
        "   NOX_true  NOX_sensor  NO2_true  NO2_sensor  O3_sensor     T    RH      AH  \n",
        "0     166.0      1056.0     113.0      1692.0     1268.0  13.6  48.9  0.7578  \n",
@@ -720,7 +730,7 @@
        "4     131.0      1205.0     116.0      1490.0     1110.0  11.2  59.6  0.7888  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,16 +739,16 @@
     "# cast date and time variable as datetime\n",
     "# replace . by : to transform to datetime format\n",
     "\n",
-    "data['Date_Time'] = data['Date_Time'].str.replace('.', ':', regex=True)\n",
+    "data['Date_Time'] = data['Date_Time'].str.replace('.', ':')\n",
     "\n",
-    "data['Date_Time'] = pd.to_datetime(data['Date_Time'])\n",
+    "data['Date_Time'] = pd.to_datetime(data['Date_Time'], format='%d/%m/%Y %H:%M:%S')\n",
     "\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,6 +888,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -916,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
